Semigroups: add flashy pictures

--- a/notebooks/Semigroups.ipynb
+++ b/notebooks/Semigroups.ipynb
@@ -9,31 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#I  method installed for Matrix matches more than one declaration\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "LoadPackage(\"Semigroups\");"
+    "LoadPackage(\"Semigroups\");;"
    ]
   },
   {
@@ -49,34 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<regular bipartition *-monoid of size 323, degree 4 with 8 generators>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "323"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M := MotzkinMonoid(4);\n",
     "Size(M);"
@@ -91,34 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "IsEnumerableSemigroupRep(M);\n",
     "IsBipartitionSemigroup(M);"
@@ -128,71 +58,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, if we ask the appropriate questions, *libsemigroups* itself will be called.  For example, it will be used when we ask for the semigroup's $D$-classes:"
+    "So, if we ask the appropriate questions, *libsemigroups* itself will be called.  For example, it will be used when we ask for the semigroup's $\\mathcal{D}$-classes:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[ <Green's D-class: <block bijection: [ 1, -1 ], [ 2, -2 ], [ 3, -3 ], [ 4, -4 ]>>, <Green's D-class: <bipartition: [ 1, 2 ], [ 3, -3 ], [ 4, -4 ], [ -1, -2 ]>>, <Green's D-class: <bipartition: [ 1 ], [ 2, -1 ], [ 3, -2 ], [ 4, -3 ], [ -4 ]>>, <Green's D-class: <bipartition: [ 1, 2 ], [ 3, 4 ], [ -1, -2 ], [ -3, -4 ]>>, <Green's D-class: <bipartition: [ 1, 2 ], [ 3, -1 ], [ 4 ], [ -2, -3 ], [ -4 ]>> ]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "d := GreensDClasses(M);\n",
-    "Length(d);"
+    "d := GreensDClasses(M);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We know that the Motzkin monoid has one $D$-class for each rank, 0 to 4."
+    "We can see how these $\\mathcal{D}$-classes fit together by displaying the semigroup's eggbox diagram:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "JupyterSplashDot(DotString(M));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[ 4, 2, 3, 0, 1 ]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "We know that the Motzkin monoid has one $\\mathcal{D}$-class for each rank, 0 to 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "List(d, class -> RankOfBipartition(Representative(class)));"
    ]
@@ -206,34 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bipartition: [ 1 ], [ 2, -4 ], [ 3, 4 ], [ -1 ], [ -2 ], [ -3 ]>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<bipartition: [ 1, -1 ], [ 2 ], [ 3, -2 ], [ 4 ], [ -3, -4 ]>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x := Random(d[5]);\n",
     "y := Random(d[2]);"
@@ -241,42 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "RankOfBipartition(x);\n",
-    "RankOfBipartition(y);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,44 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "NrCongruenceClasses(cong);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "IsReesCongruence(cong);"
    ]
@@ -343,46 +168,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<digraph with 11 vertices, 57 edges>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "latt := LatticeOfCongruences(M);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20895"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "time;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can even display this lattice:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "JupyterSplashDot(DotString(latt));"
    ]
   },
   {
