--- a/notebooks/HPCGAP.ipynb
+++ b/notebooks/HPCGAP.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CODE_DIR := \"/Users/sal/gap/\";;"
+    "CODE_DIR := \"gap/\";;"
    ]
   },
   {
@@ -26,7 +26,7 @@
     "\n",
     "## Multiplying matrices\n",
     "\n",
-    "We create a couple of random integer matrices and check GAP's default serial multiply."
+    "We create a couple of random rational matrices and check GAP's default serial multiply."
    ]
   },
   {
@@ -38,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 6.73s cpu time: 6.10s memory allocated: 1006.98MB result returned\n"
+      "wall time: 10.67s cpu time: 9.23s memory allocated: 1006.69MB result returned\n"
      ]
     }
    ],
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 2.59s cpu time: 15.39s memory allocated: 454.80MB result returned\n"
+      "wall time: 2.44s cpu time: 14.54s memory allocated: 458.3MB result returned\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Accumulate` function takes a list of tasks and combines their results as they become available, allowing memory to be recovered."
+    "The `Accumulate` function takes a list of tasks and combines their results as they become available, allowing memory to be recovered quickly."
    ]
   },
   {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "[ PSL(2, 17), M_11 ]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {
       "text/plain": ""
      },
@@ -178,7 +178,7 @@
        "[ 11, 7 ]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {
       "text/plain": ""
      },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "115975"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {
       "text/plain": ""
      },
@@ -220,38 +220,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "function ( s )\n",
-      "    return Filtered( PartitionsSet( [ 2 .. s.rank ] ), function ( p )\n",
-      "            return TestPartition( s, p );\n",
-      "        end );\n",
-      "end\n"
-     ]
+     "data": {
+      "text/plain": [
+       "function( s ) ... end"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Display(Brute);"
+    "BruteForceSearch := function ( s )\n",
+    "    return Filtered( PartitionsSet( [ 2 .. s.rank ] ), \n",
+    "        p -> TestPartition( s, p ));        \n",
+    "end;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wall time: 34.92s cpu time: 29.13s memory allocated: 16.38GB result returned\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ShowBench(Brute, c[1]);"
    ]
@@ -265,23 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "function ( s )\n",
-      "    return ParFiltered( PartitionsSet( [ 2 .. s.rank ] ), function ( p )\n",
-      "            return TestPartition( s, p );\n",
-      "        end, 100 );\n",
-      "end\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Display(ParBrute);"
+    "ParBruteForceSearch := function ( s )\n",
+    "    return ParFiltered( PartitionsSet( [ 2 .. s.rank ] ), \n",
+    "        p -> TestPartition( s, p ));        \n",
+    "end;"
    ]
   },
   {
