--- a/notebooks/Meataxe 64 Demo Experiments.ipynb
+++ b/notebooks/Meataxe 64 Demo Experiments.ipynb
@@ -1,18 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Meataxe64 Package, Core Functionality"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Syntax warning: Unbound global variable in /Users/sal/gap/pmatmul.g:155\n",
+      "Syntax warning: Unbound global variable in gap/pmatmul.g:155\n",
       "    i :=   WaitAnyTask(tasks);\n",
       "           ^^^^^^^^^^^\n",
-      "Syntax warning: Unbound global variable in /Users/sal/gap/pmatmul.g:159\n",
+      "Syntax warning: Unbound global variable in gap/pmatmul.g:159\n",
       "        i := WaitAnyTask(tasks);\n",
       "             ^^^^^^^^^^^\n"
      ]
@@ -23,7 +30,7 @@
        "true"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {
       "text/plain": ""
      },
@@ -35,7 +42,7 @@
        "true"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {
       "text/plain": ""
      },
@@ -43,12 +50,19 @@
     }
    ],
    "source": [
-    "LoadPackage(\"meataxe64\"); Read(\"/Users/sal/gap/pmatmul.g\"); LoadPackage(\"jupyterviz\");"
+    "LoadPackage(\"meataxe64\"); Read(\"gap/pmatmul.g\"); LoadPackage(\"jupyterviz\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $100\\, 000 \\times 100\\, 000$ matrices over $\\mathbb{F}_2$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +71,7 @@
        "< matrix 100000x100000 : <MTX64 GF(2)>>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {
       "text/plain": ""
      },
@@ -70,55 +84,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MTX64_WriteMatrix(m,\"a\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 58.0s cpu time: 583.90s memory allocated: 72B no result returned\n"
+      "wall time: 51.43s cpu time: 526.48s memory allocated: 72B no result returned\n"
      ]
-    }
-   ],
-   "source": [
-    "ShowBench(MTX64_fMultiply, \".\", \"a\", \"a\", \"b\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
        "< matrix 100000x100000 : <MTX64 GF(2)>>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 46,
      "metadata": {
       "text/plain": ""
      },
@@ -126,12 +108,27 @@
     }
    ],
    "source": [
-    "p := MTX64_ReadMatrix(\"b\");\n"
+    "MTX64_WriteMatrix(m,\"a\");;\n",
+    "ShowBench(MTX64_fMultiply, \".\", \"a\", \"a\", \"b\");\n",
+    "p := MTX64_ReadMatrix(\"b\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gaussian Elimination\n",
+    "\n",
+    "To see the full capability we need a singular matrix. \n",
+    "\n",
+    "We take the Kronecker (tensor) product of two rectangular matrices. \n",
+    "\n",
+    "If $A$ is $n\\times m$ and $B$ is $m\\times n$ with $m < n$ then $A\\otimes B$ will have rank at most $m^2$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -140,47 +137,19 @@
        "<MTX64 GF(3^2)>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {
       "text/plain": ""
      },
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f := MTX64_FiniteField(9);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m1 := RandomMat(200,99,GF(9));;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m2 := RandomMat(99,200,GF(9));;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
        "< matrix 19800x19800 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {
       "text/plain": ""
      },
@@ -188,6 +157,9 @@
     }
    ],
    "source": [
+    "f := MTX64_FiniteField(9);\n",
+    "m1 := RandomMat(200,99,GF(9));;\n",
+    "m2 := RandomMat(99,200,GF(9));;\n",
     "m := MTX64_Matrix(KroneckerProduct(m1,m2));"
    ]
   },
@@ -195,39 +167,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our primitive Gaussian elimnination operation applied to a matrix $A$, computes $M$, $K$, $R$, $\\gamma$ and $\\rho$ satisfying: \n",
+    "Our basic Gaussian elimnination operation applied to a matrix $A$, computes $M$, $K$, $R$, $\\gamma$ and $\\rho$ satisfying: \n",
     "\n",
     "$$\\pmatrix{M&0\\cr K & 1} \\rho A \\gamma = \\pmatrix{-1&R\\cr0&0}$$ \n",
     "\n",
-    "where $\\gamma$ and $\\rho$ are permutations that effectively select the pivot columns and pivot rows of $A$. Using this, we can compute inverses, solve systems of equations, determines nullspaces and so on efficiently."
+    "where $\\gamma$ and $\\rho$ are permutations that effectively select the pivot columns and pivot rows of $A$. \n",
+    "\n",
+    "Using this, we can compute inverses, solve systems of equations, determine nullspaces, etc. efficiently."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "rec( cleaner := <object>, colSelect := <object>, det := <object>, multiplier := <object>, rank := 9801, remnant := <object>, rowSelect := <object> )"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "35962"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wall time: 12.27s cpu time: 11.39s memory allocated: 747.81MB no result return\\\n",
+      "ed\n"
+     ]
     },
     {
      "data": {
@@ -235,7 +195,7 @@
        "< matrix 9999x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 52,
      "metadata": {
       "text/plain": ""
      },
@@ -247,7 +207,7 @@
        "< matrix 9801x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {
       "text/plain": ""
      },
@@ -259,7 +219,7 @@
        "< matrix 9801x9999 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {
       "text/plain": ""
      },
@@ -267,42 +227,51 @@
     }
    ],
    "source": [
-    "r := MTX64_Echelize(m); time;\n",
-    "r.cleaner; r. multiplier; r.remnant;"
+    "ShowBench(function() ech := MTX64_Echelize(m);end);\n",
+    "ech. multiplier; ech.cleaner; ech.remnant;  # M, K and R in the above formula"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13297"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "m*m;; time;"
+    "We an compare this runtime to multiplication. If $m$ was full rank we would expect them to be the same, since $m$ is lower rank, the Gaussian elimination is actually faster."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 5.7s cpu time: 50.5s memory allocated: 144B result returned\n"
+      "wall time: 24.67s cpu time: 24.39s memory allocated: 186.95MB result returned\n"
+     ]
+    }
+   ],
+   "source": [
+    "ShowBench(\\*,m,m);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also use the multi-threaded version of this, although this problem is rather small for it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wall time: 4.68s cpu time: 46.18s memory allocated: 144B result returned\n"
      ]
     },
     {
@@ -311,7 +280,7 @@
        "true"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 56,
      "metadata": {
       "text/plain": ""
      },
@@ -324,8 +293,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run-time versus matrix size -- GF(2)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +319,7 @@
        "function( m ) ... end"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 59,
      "metadata": {
       "text/plain": ""
      },
@@ -356,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
