--- a/notebooks-master/Meataxe64 Demo.ipynb
+++ b/notebooks-master/Meataxe64 Demo.ipynb
@@ -9,28 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Syntax warning: Unbound global variable in gap/pmatmul.g:155\n",
-      "    i :=   WaitAnyTask(tasks);\n",
-      "           ^^^^^^^^^^^\n",
-      "Syntax warning: Unbound global variable in gap/pmatmul.g:159\n",
-      "        i := WaitAnyTask(tasks);\n",
-      "             ^^^^^^^^^^^\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "true"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {
       "text/plain": ""
      },
@@ -42,7 +30,7 @@
        "true"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {
       "text/plain": ""
      },
@@ -50,7 +38,7 @@
     }
    ],
    "source": [
-    "LoadPackage(\"meataxe64\"); Read(\"gap/pmatmul.g\"); LoadPackage(\"jupyterviz\");"
+    "LoadPackage(\"meataxe64\"); Read(\"../gap/bench.g\"); LoadPackage(\"jupyterviz\");"
    ]
   },
   {
@@ -301,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +307,7 @@
        "function( m ) ... end"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 8,
      "metadata": {
       "text/plain": ""
      },
@@ -332,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,14 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/javascript": [
        "( function ( element ) {\n",
-       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"x\" : [200,2200,4200,6200,8200,10200,12200,14200,16200,18200,20200,22200,24200,26200,28200,30200],\"y\" : [0,6,33,80,158,438,438,713,1064,1480,2179,2705,3492,4689,5537,7060],\"type\" : \"line\"},{\"x\" : [200,2200,4200,6200,8200,10200,12200,14200,16200,18200,20200,22200,24200,26200,28200,30200],\"y\" : [2,12,44,99,296,480,858,1329,2790,4111,5337,7266,9868,12417,15556,19425],\"type\" : \"line\"},{\"x\" : [200,2200,4200,6200,8200,10200,12200,14200,16200,18200,20200,22200,24200,26200,28200,30200],\"y\" : [19,19,49,110,96,150,232,324,408,558,719,965,1154,1444,1773,2156],\"type\" : \"line\"}],\"layout\" : {\"height\" : 400}},\"tool\" : \"plotly\"}\n",
+       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"x\" : [200,2200,4200,6200,8200,10200,12200,14200,16200,18200,20200,22200,24200,26200,28200,30200],\"y\" : [0,7,37,81,162,267,459,736,1267,1474,2003,2822,3462,4743,5451,7020],\"type\" : \"line\"},{\"x\" : [200,2200,4200,6200,8200,10200,12200,14200,16200,18200,20200,22200,24200,26200,28200,30200],\"y\" : [3,11,42,101,280,438,780,1182,2666,3761,5108,6845,9295,11603,14659,18273],\"type\" : \"line\"},{\"x\" : [200,2200,4200,6200,8200,10200,12200,14200,16200,18200,20200,22200,24200,26200,28200,30200],\"y\" : [4,16,57,130,126,193,289,370,403,538,698,915,1130,1482,1755,2109],\"type\" : \"line\"}],\"layout\" : {\"height\" : 400}},\"tool\" : \"plotly\"}\n",
        ",function(element,visualization){\n",
        "});\n",
        "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"viz-tool-plotly\"\n",
@@ -364,7 +352,7 @@
        "} )( element.get( 0 ) )"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {
       "application/javascript": ""
      },
