Added some more material.

--- a/notebooks-HPCGAP/HPCGAP.ipynb
+++ b/notebooks-HPCGAP/HPCGAP.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CODE_DIR := \"gap/\";;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Read(Concatenation(CODE_DIR, \"pmatmul.g\"));"
+    "CODE_DIR := \"../gap/\";;\n",
+    "Read(Concatenation(CODE_DIR, \"pmatmul.g\"));\n",
+    "Read(Concatenation(CODE_DIR, \"makepar.g\"));\n",
+    "Read(Concatenation(CODE_DIR, \"bench.g\"));"
    ]
   },
   {
@@ -31,20 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 10.67s cpu time: 9.23s memory allocated: 1006.69MB result returned\n"
+      "wall time: 6.60s cpu time: 5.99s memory allocated: 1007.49MB result returned\n"
      ]
     }
    ],
    "source": [
-    "m1 := RandomMat(400, 400, Rationals);;\n",
-    "m2 := RandomMat(400, 400, Rationals);;\n",
+    "m1 := MakeImmutable(RandomMat(400, 400, Rationals));;\n",
+    "m2 := MakeImmutable(RandomMat(400, 400, Rationals));;\n",
     "ShowBench(\\*, m1, m2);"
    ]
   },
@@ -57,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +60,7 @@
        "function( m1, m2, chop1, chop2, chop3 ) ... end"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {
       "text/plain": ""
      },
@@ -96,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 2.44s cpu time: 14.54s memory allocated: 458.3MB result returned\n"
+      "wall time: 2.92s cpu time: 9.31s memory allocated: 605.58MB result returned\n"
      ]
     }
    ],
@@ -120,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -157,34 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[ PSL(2, 17), M_11 ]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[ 11, 7 ]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c := cands([136,165],[1..13]);; List(c, x -> x.g); List(c, x-> x.rank);"
    ]
@@ -198,49 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "115975"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "NrPartitionsSet([2..11]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "function( s ) ... end"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "BruteForceSearch := function ( s )\n",
-    "    return Filtered( PartitionsSet( [ 2 .. s.rank ] ), \n",
-    "        p -> TestPartition( s, p ));        \n",
-    "end;"
    ]
   },
   {
@@ -249,7 +180,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ShowBench(Brute, c[1]);"
+    "BruteForceSearch := function ( s )\n",
+    "    return Filtered( PartitionsSet([2..s.rank]), \n",
+    "    p -> TestPartition( s, p ));        \n",
+    "end;;\n",
+    "ShowBench(BruteForceSearch, c[1]);"
    ]
   },
   {
@@ -267,33 +202,229 @@
    "source": [
     "ParBruteForceSearch := function ( s )\n",
     "    return ParFiltered( PartitionsSet( [ 2 .. s.rank ] ), \n",
-    "        p -> TestPartition( s, p ));        \n",
-    "end;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wall time: 21.15s cpu time: 71.66s memory allocated: 14.43GB result returned\n"
-     ]
-    }
-   ],
-   "source": [
-    "ShowBench(ParBrute, c[1]);"
+    "    p -> TestPartition( s, p ), 10);        \n",
+    "end;\n",
+    "ShowBench(ParBruteForceSearch, c[1]);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other things -- some of the atomic data structures?"
+    "## Atomic and Locked Data\n",
+    "\n",
+    "Shared data is unavoidable in many symbolic computation. HPCGAP offers a number of \n",
+    "forms of support.  First lets see what happens if we use the default lists (this would normally be forbidden, but we've suppressed some checking).\n",
+    "\n",
+    "A simple calculation that takes a somewhat variable time:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wall time: 1.87us cpu time: 0ns memory allocated: 96B result returned\n"
+     ]
+    }
+   ],
+   "source": [
+    "p := NextProbablyPrimeInt(2^100);;\n",
+    "x := NextProbablyPrimeInt(2^50);;\n",
+    "ShowBench(PowerModInt, x, x, p );"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run 10000 instances of this in tasks, and they all attempt to append their results to a normal list `l`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9966"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l := [];;\n",
+    "process := function(i) Add(l, MakeImmutable([i, PowerModInt(x+i,x+i,p)])); end;;\n",
+    "tasks := List([1..10000], i -> RunTask(process,i));; WaitTasks(tasks);;\n",
+    "Length(l);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some are lost. Now if we use an atomic list datastructure, all the data is successfully written."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l := AtomicList();;\n",
+    "process := function(i) Add(l, MakeImmutable([i, PowerModInt(x+i,x+i,p)])); end;;\n",
+    "tasks := List([1..10000], i -> RunTask(process,i));; WaitTasks(tasks);;\n",
+    "Length(l);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However atomic lists only protect single operations. If we run tasks which append twice to the list, we quickly find that some of the pairs do not stay together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200000"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "237"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "237"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "238"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l := AtomicList();;\n",
+    "process := function(i)  Add(l,i); Add(l,i); end;;\n",
+    "    tasks := List([1..100000], i -> RunTask(process,i));; WaitTasks(tasks);;\n",
+    "Length(l); \n",
+    "x := First([1..100000], i-> l[2*i-1] <>l[2*i]); l[2*x-1];l[2*x];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we want something more like atomic transactions, we need to use shared objects, which have explicit locking. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200000"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l := [];; ShareObj(l);;\n",
+    "process := function(i) atomic readwrite l do \n",
+    "    Add(l,i); Add(l,i); \n",
+    "od; end;;\n",
+    "tasks := List([1..100000], i -> RunTask(process,i));; WaitTasks(tasks);;\n",
+    "atomic l do MakeImmutable(l); od; # we need to get a a lock on l to make it readonly.\n",
+    "Length(l);\n",
+    "ForAll([1..100000], i-> l[2*i-1] = l[2*i]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
